--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <img src="/Aquatica/vorld.png" alt="vorld" />
                 </div>
                 <div class="heroTitle">
-                    <h1>Welcome to aqutica</h1>
+                    <h1>Welcome to aquatica</h1>
                     <p>
                         Embark on a voyage where the marvels<br />
                         of a boundless ocean planet unfold before you
@@ -156,50 +156,63 @@
             <section id="slide5" class="slide slide5">
                 <canvas id="canvas"></canvas>
                 <div class="modelTextCon">
-                    <h1 class="modelText">
-                        <!--Helmet-->
-                        Crafted to relay expressions of the Astrokid and also keep them
-                        safe at the same time
-                    </h1>
+                    <div class="modelText">
+                        <!-- Helmet -->
+                        <h1>Helmet</h1>
+                        <p>
+                            Crafted to relay expressions of the Astrokid and also keep them
+                            safe at the same time
+                        </p>
+                    </div>
 
-                    <h1 class="modelText">
+                    <div class="modelText">
                         <!--Ear piece  -->
-                        The communication device that coordinates with the bots crafted by
-                        the player
-                    </h1>
-                    <h1 class="modelText">
-                        <!--Backpack  -->
-                        The energy carrier that powers the suit, storage that helps player
-                        to carry items during navigation on aquatica
-                    </h1>
-                    <h1 class="modelText">
+                        <h1>Ear Piece</h1>
+                        <p>
+                            The communication device that coordinates with the bots crafted
+                            by the player
+                        </p>
+                    </div>
+                    <div class="modelText">
                         <!--Generator  -->
-                        This one fills up the carrier over period of time based on the
-                        level powering the Astro kid suit
-                    </h1>
+                        <h1>Generator</h1>
+                        <p>
+                            The energy carrier that powers the suit, storage that helps
+                            player to carry items during navigation on aquatica
+                        </p>
+                    </div>
+                    <div class="modelText">
+                        <!--Backpack  -->
+                        <h1>Backpack</h1>
+                        <p>
+                            This one fills up the carrier over period of time based on the
+                            level powering the Astro kid suit
+                        </p>
+                    </div>
 
-                    <h1 class="modelText">
+                    <div class="modelText">
                         <!-- Belt  -->
-                        Customisable accessory holder for easy access, can hold
-                        ammunition, med kits etc
-                    </h1>
-                    <h1 class="modelText">
+                        <h1>Belt</h1>
+                        <p>
+                            Customisable accessory holder for easy access, can hold
+                            ammunition, med kits etc
+                        </p>
+                    </div>
+                    <div class="modelText">
                         <!-- Shoes  -->
-                        Equipped with thrusters, Gives the boost to the player when needed
-                        in navigating the massive terrain or quickly escape threats
-                    </h1>
+                        <h1>Shoes</h1>
+                        <p>
+                            Equipped with thrusters, Gives the boost to the player when
+                            needed in navigating the massive terrain or quickly escape
+                            threats
+                        </p>
+                    </div>
                 </div>
             </section>
         </div>
 
         <div id="curosol" class="curosol">
-            <div class="StupidBtn">
-                <img src="/svg/right.svg" alt="right" />
-            </div>
-
-            <div class="StupidBtn2">
-                <img src="/svg/left.svg" alt="left" />
-            </div>
+            <h1 class="curosolTitle">CHOOSE YOUR PATH</h1>
 
             <div class="bgTextCon">
                 <div class="bgText1">
@@ -207,89 +220,93 @@
                     <h1>Aquatica</h1>
                 </div>
 
-                <div class="bgText2">
+                <div class="bgText3">
                     <h1>ODDYSSEY</h1>
                     <h1>ODDYSSEY</h1>
                 </div>
             </div>
 
-            <div class="catCardCon">
-                <div class="catCard catCard1">
-                    <div>
-                        <h1>Eco Harvesters</h1>
-                    </div>
+            <div class="sliderScrollCon">
+                <div id="catCardCon" class="catCardCon">
+                    <div class="catCard catCard1">
+                        <div>
+                            <h1>Eco Harvesters</h1>
+                        </div>
 
-                    <p>Specialized in resource extraction and gathering.</p>
-                </div>
-                <div class="catCard catCard2">
-                    <div>
-                        <h1>Fauna Master</h1>
+                        <p>Specialized in resource extraction and gathering.</p>
                     </div>
-                    <p>
-                        Expertise in calming, taming, and interacting with alien wildlife.
-                    </p>
-                </div>
-                <div class="catCard catCard3">
-                    <div>
-                        <h1>Tech artisian</h1>
+                    <div class="catCard catCard2">
+                        <div>
+                            <h1>Fauna Master</h1>
+                        </div>
+                        <p>
+                            Expertise in calming, taming, and interacting with alien
+                            wildlife.
+                        </p>
                     </div>
-                    <p>
-                        Building and crafting with advanced toolkits and augmented reality
-                        for blueprints.
-                    </p>
-                </div>
-                <div class="catCard catCard4">
-                    <div>
-                        <h1>Star Warior</h1>
+                    <div class="catCard catCard3">
+                        <div>
+                            <h1>Tech artisian</h1>
+                        </div>
+                        <p>
+                            Building and crafting with advanced toolkits and augmented
+                            reality for blueprints.
+                        </p>
                     </div>
-                    <p>Skilled in tactical combat and defense.</p>
-                </div>
-                <div class="catCard catCard5">
-                    <div>
-                        <h1>Demolition Aces</h1>
+                    <div class="catCard catCard4">
+                        <div>
+                            <h1>Star Warior</h1>
+                        </div>
+                        <p>Skilled in tactical combat and defense.</p>
                     </div>
-                    <p>Specialization in demolition, handling explosive devices.</p>
-                </div>
-                <div class="catCard catCard6">
-                    <div>
-                        <h1>Galactic Merchants</h1>
+                    <div class="catCard catCard5">
+                        <div>
+                            <h1>Demolition Aces</h1>
+                        </div>
+                        <p>Specialization in demolition, handling explosive devices.</p>
                     </div>
-                    <p>Skilled in trade, negotiations, and economic strategies.</p>
-                </div>
-                <div class="catCard catCard7">
-                    <div>
-                        <h1>Bio Sages</h1>
+                    <div class="catCard catCard6">
+                        <div>
+                            <h1>Galactic Merchants</h1>
+                        </div>
+                        <p>Skilled in trade, negotiations, and economic strategies.</p>
                     </div>
-                    <p>Conducting research, analysis of alien environment.</p>
-                </div>
-                <div class="catCard catCard8">
-                    <div>
-                        <h1>Crypto Hackers</h1>
+                    <div class="catCard catCard7">
+                        <div>
+                            <h1>Bio Sages</h1>
+                        </div>
+                        <p>Conducting research, analysis of alien environment.</p>
                     </div>
-                    <p>Expertise in hacking, cybersecurity, and digital warfare.</p>
-                </div>
-                <div class="catCard catCard9">
-                    <div>
-                        <h1>Peace Keepers</h1>
+                    <div class="catCard catCard8">
+                        <div>
+                            <h1>Crypto Hackers</h1>
+                        </div>
+                        <p>Expertise in hacking, cybersecurity, and digital warfare.</p>
                     </div>
-                    <p>Negotiation, conflict resolution, and community management.</p>
-                </div>
-                <div class="catCard catCard10">
-                    <div>
-                        <h1>Master Builders</h1>
+                    <div class="catCard catCard9">
+                        <div>
+                            <h1>Peace Keepers</h1>
+                        </div>
+                        <p>Negotiation, conflict resolution, and community management.</p>
                     </div>
-                    <p>
-                        Focused on large-scale construction and architectural development.
-                    </p>
-                </div>
-                <div class="catCard catCard11">
-                    <div>
-                        <h1>Scout Voyagers</h1>
+                    <div class="catCard catCard10">
+                        <div>
+                            <h1>Master Builders</h1>
+                        </div>
+                        <p>
+                            Focused on large-scale construction and architectural
+                            development.
+                        </p>
                     </div>
-                    <p>
-                        Expertise in exploration, reconnaissance, and mapping uncharted
-                        territories.
-                    </p>
+                    <div class="catCard catCard11">
+                        <div>
+                            <h1>Scout Voyagers</h1>
+                        </div>
+                        <p>
+                            Expertise in exploration, reconnaissance, and mapping uncharted
+                            territories.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -354,7 +371,7 @@
         <div class="nftText">
             <h1>BATTLE PASS</h1>
             <p>Our Exclusive NFT Collection</p>
-            <a href="www.tensor.com">MINT ON TENSOR</a>
+            <!-- <a href="www.tensor.com">MINT ON TENSOR</a> -->
         </div>
         <div class="bgText">
             <h1>N</h1>
@@ -363,7 +380,7 @@
         </div>
     </div>
 
-    <div class="socials">
+    <div id="socials" class="socials">
         <div class="socialCon">
             <h1>READY TO EXPERIENCE</h1>
             <h1 class="yellow">NEW ERA OF GAMING<span>?</span></h1>
@@ -371,6 +388,18 @@
                 <input type="email" placeholder="your email here..." />
                 <button type="submit">SUBSCIBE</button>
             </form>
+            <div class="links">
+                <a href="">
+                    <img src="/Aquatica/steam.png" alt="STEAM" />
+                </a>
+
+                <a href="">
+                    <img src="/Aquatica/epic.png" alt="EPIC" />
+                </a>
+                <a href="">
+                    <img src="/Aquatica/solana.png" alt="SOL" />
+                </a>
+            </div>
         </div>
     </div>
     <!-- <div class="temp"></div> -->
