fixed some responsive

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+    
+    <div id="loader">
+        
+    </div>
+
     <div id="page" class="page">
         <div class="heroSec">
             <div class="heroImg"></div>
@@ -28,13 +33,13 @@
                 <div class="herofooter">
                     <div class="slider">
                         <div class="slideContent">
-                            <h1>EARN</h1>
+                            <h1>EXPLORE</h1>
                             <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">AQUATICA</h1>
+                            <h1 class="hollow">SURVIVE</h1>
                             <img src="/Aquatica/star.png" alt="star" />
-                            <h1>SHOOT</h1>
+                            <h1>BUILD</h1>
                             <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">PIONEER</h1>
+                            <h1 class="hollow">CONQUER</h1>
                             <img src="/Aquatica/star.png" alt="star" />
 
                             <h1>EARN</h1>
@@ -313,7 +318,9 @@
     </div>
 
     <div class="theLore">
-        <div class="thecomicCon"></div>
+        <div class="thecomicCon">
+                <img src="/Aquatica/comic.png" alt="">
+            </div>
         <div class="loreText">
             <h1>THE LORE</h1>
             <p>Understand the depth of aquatica with our stunning comic series</p>
@@ -369,7 +376,7 @@
             <img src="/Aquatica/nftMock.png" alt="" />
         </div>
         <div class="nftText">
-            <h1>BATTLE PASS</h1>
+            <h1>ASTRO KIDS</h1>
             <p>Our Exclusive NFT Collection</p>
             <!-- <a href="www.tensor.com">MINT ON TENSOR</a> -->
         </div>
@@ -390,15 +397,13 @@
             </form>
             <div class="links">
                 <a href="">
-                    <img src="/Aquatica/steam.png" alt="STEAM" />
+                    <img src="/Aquatica/x.png" alt="STEAM" />
                 </a>
 
                 <a href="">
-                    <img src="/Aquatica/epic.png" alt="EPIC" />
+                    <img src="/Aquatica/discord.png" alt="EPIC" />
                 </a>
-                <a href="">
-                    <img src="/Aquatica/solana.png" alt="SOL" />
-                </a>
+
             </div>
         </div>
     </div>
