fixed some responsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 <body>
     
     <div id="loader">
-        
+        <div class="loaderImg">
+            <img src="/Aquatica/favicon.ico" alt="">
+                    <img src="/Aquatica/vorld.png" alt="">
+        </div>
+            <div class="loaderText">
+                <h1>Tips: </h1>
+                <p id="loaderTip"></p>
+            </div>
     </div>
 
     <div id="page" class="page">
