fixed some responsive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Aquatica</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Aquatica Odyssey is a multiplayer online game that takes place in a vast ocean planet. Players can explore, build, and conquer the uncharted territories of Aquatica." />
+    <link rel="icon" href="/Aquatica/favicon.ico" type="image/x-icon" />
     <link href="./style.css" rel="stylesheet" />
     <link href="./global.css" rel="stylesheet" />
     <link href="./responsive.css" rel="stylesheet" />
