last update with model

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Aquatica Odyssey is a multiplayer online game that takes place in a vast ocean planet. Players can explore, build, and conquer the uncharted territories of Aquatica." />
     <link rel="icon" href="/Aquatica/favicon.ico" type="image/x-icon" />
     <link href="./style.css" rel="stylesheet" />
+
+    <link href="./style2.css" rel="stylesheet" />
     <link href="./global.css" rel="stylesheet" />
     <link href="./responsive.css" rel="stylesheet" />
 </head>
@@ -17,7 +19,6 @@
     <div id="loader">
         <div class="loaderImg">
             <img src="/Aquatica/favicon.ico" alt="">
-                    <img src="/Aquatica/vorld.png" alt="">
         </div>
             <div class="loaderText">
                 <h1>Tips: </h1>
