--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img src="/Aquatica/favicon.ico" alt="">
         </div>
             <div class="loaderText">
-                <h1>Tips: </h1>
+                <!-- <h1>Tips: </h1> -->
                 <p id="loaderTip"></p>
             </div>
     </div>
@@ -229,17 +229,17 @@
         <div id="curosol" class="curosol">
             <h1 class="curosolTitle">CHOOSE YOUR PATH</h1>
 
-            <div class="bgTextCon">
-                <div class="bgText1">
-                    <h1>Aquatica</h1>
-                    <h1>Aquatica</h1>
-                </div>
-
-                <div class="bgText3">
-                    <h1>ODDYSSEY</h1>
-                    <h1>ODDYSSEY</h1>
-                </div>
-            </div>
+            <!-- <div class="bgTextCon"> -->
+            <!--     <div class="bgText1"> -->
+            <!--         <h1>Aquatica</h1> -->
+            <!--         <h1>Aquatica</h1> -->
+            <!--     </div> -->
+            <!---->
+            <!--     <div class="bgText3"> -->
+            <!--         <h1>ODDYSSEY</h1> -->
+            <!--         <h1>ODDYSSEY</h1> -->
+            <!--     </div> -->
+            <!-- </div> -->
 
             <div class="sliderScrollCon">
                 <div id="catCardCon" class="catCardCon">
