--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Aquatica</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Aquatica Odyssey is a multiplayer online game that takes place in a vast ocean planet. Players can explore, build, and conquer the uncharted territories of Aquatica." />
+    <meta name="description"
+        content="Aquatica Odyssey is a multiplayer online game that takes place in a vast ocean planet. Players can explore, build, and conquer the uncharted territories of Aquatica." />
     <link rel="icon" href="/Aquatica/favicon.ico" type="image/x-icon" />
     <link href="./style.css" rel="stylesheet" />
 
@@ -15,15 +16,14 @@
 </head>
 
 <body>
-    
     <div id="loader">
         <div class="loaderImg">
-            <img src="/Aquatica/favicon.ico" alt="">
+            <img src="/Aquatica/favicon.ico" alt="" />
         </div>
-            <div class="loaderText">
-                <!-- <h1>Tips: </h1> -->
-                <p id="loaderTip"></p>
-            </div>
+        <div class="loaderText">
+            <!-- <h1>Tips: </h1> -->
+            <p id="loaderTip"></p>
+        </div>
     </div>
 
     <div id="page" class="page">
@@ -175,8 +175,8 @@
                         <!-- Helmet -->
                         <h1>Helmet</h1>
                         <p>
-                            Crafted to relay expressions of the Astrokid and also keep them
-                            safe at the same time
+                            Crafted to convey the expressions of the Astrokid while also
+                            ensuring their safety.
                         </p>
                     </div>
 
@@ -184,24 +184,33 @@
                         <!--Ear piece  -->
                         <h1>Ear Piece</h1>
                         <p>
-                            The communication device that coordinates with the bots crafted
-                            by the player
+                            A communication device that coordinates with the bots crafted by
+                            the player.
                         </p>
                     </div>
                     <div class="modelText">
                         <!--Generator  -->
                         <h1>Generator</h1>
                         <p>
-                            The energy carrier that powers the suit, storage that helps
-                            player to carry items during navigation on aquatica
+                            This device gradually refills the carrier over time based on the
+                            level, powering the Astrokid's suit.
+                        </p>
+                    </div>
+                    <div class="modelText">
+                        <!--hands  -->
+                        <h1>Hands</h1>
+                        <p>
+                            The mobile control center that provides access to all operations
+                            and communications for the player.
                         </p>
                     </div>
                     <div class="modelText">
                         <!--Backpack  -->
                         <h1>Backpack</h1>
                         <p>
-                            This one fills up the carrier over period of time based on the
-                            level powering the Astro kid suit
+                            This serves as the energy carrier that powers the suit. It
+                            provides storage that helps the player carry items while
+                            navigating Aquatica.
                         </p>
                     </div>
 
@@ -209,17 +218,17 @@
                         <!-- Belt  -->
                         <h1>Belt</h1>
                         <p>
-                            Customisable accessory holder for easy access, can hold
-                            ammunition, med kits etc
+                            A customizable accessory holder for easy access. It can hold
+                            ammunition, med kits, etc.
                         </p>
                     </div>
                     <div class="modelText">
                         <!-- Shoes  -->
                         <h1>Shoes</h1>
                         <p>
-                            Equipped with thrusters, Gives the boost to the player when
-                            needed in navigating the massive terrain or quickly escape
-                            threats
+                            Equipped with thrusters, these shoes provide a boost to the
+                            player when needed, aiding in navigating the vast terrain or
+                            quickly escaping threats.
                         </p>
                     </div>
                 </div>
@@ -329,8 +338,8 @@
 
     <div class="theLore">
         <div class="thecomicCon">
-                <img src="/Aquatica/comic.png" alt="">
-            </div>
+            <img src="/Aquatica/comic.png" alt="" />
+        </div>
         <div class="loreText">
             <h1>THE LORE</h1>
             <p>Understand the depth of aquatica with our stunning comic series</p>
@@ -413,7 +422,6 @@
                 <a href="">
                     <img src="/Aquatica/discord.png" alt="EPIC" />
                 </a>
-
             </div>
         </div>
     </div>
