--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="./responsive.css" rel="stylesheet" />
 </head>
 
-<body>
+<body data-lenis-prevent>
     <div id="loader">
         <div class="loaderImg">
             <img src="/Aquatica/favicon.ico" alt="" />
@@ -52,32 +52,32 @@
                             <h1 class="hollow">CONQUER</h1>
                             <img src="/Aquatica/star.png" alt="star" />
 
-                            <h1>EARN</h1>
+                            <h1>EXPLORE</h1>
                             <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">AQUATICA</h1>
+                            <h1 class="hollow">SURVIVE</h1>
                             <img src="/Aquatica/star.png" alt="star" />
-                            <h1>SHOOT</h1>
+                            <h1>BUILD</h1>
                             <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">PIONEER</h1>
+                            <h1 class="hollow">CONQUER</h1>
                             <img src="/Aquatica/star.png" alt="star" />
                         </div>
                         <div class="slideContent">
-                            <h1>EARN</h1>
+                            <h1>EXPLORE</h1>
                             <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">AQUATICA</h1>
+                            <h1 class="hollow">SURVIVE</h1>
                             <img src="/Aquatica/star.png" alt="star" />
-                            <h1>SHOOT</h1>
+                            <h1>BUILD</h1>
                             <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">PIONEER</h1>
+                            <h1 class="hollow">CONQUER</h1>
                             <img src="/Aquatica/star.png" alt="star" />
 
-                            <h1>EARN</h1>
+                            <h1>EXPLORE</h1>
                             <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">AQUATICA</h1>
+                            <h1 class="hollow">SURVIVE</h1>
                             <img src="/Aquatica/star.png" alt="star" />
-                            <h1>SHOOT</h1>
+                            <h1>BUILD</h1>
                             <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">PIONEER</h1>
+                            <h1 class="hollow">CONQUER</h1>
                             <img src="/Aquatica/star.png" alt="star" />
                         </div>
                     </div>
