--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@
 
                     <h1>02</h1>
                 </div>
-                <div class="bgTextCon">
-                    <div class="bgText1">
-                        <h1>Aquatica</h1>
-                        <h1>Aquatica</h1>
-                    </div>
-
-                    <div class="bgText2">
-                        <h1>ODDYSSEY</h1>
-                        <h1>ODDYSSEY</h1>
-                    </div>
-                </div>
+                <!-- <div class="bgTextCon"> -->
+                <!--     <div class="bgText1"> -->
+                <!--         <h1>Aquatica</h1> -->
+                <!--         <h1>Aquatica</h1> -->
+                <!--     </div> -->
+                <!---->
+                <!--     <div class="bgText2"> -->
+                <!--         <h1>ODDYSSEY</h1> -->
+                <!--         <h1>ODDYSSEY</h1> -->
+                <!--     </div> -->
+                <!-- </div> -->
             </section>
 
             <section id="slide3" class="slide slide3">
@@ -156,17 +156,17 @@
                     <h1>04</h1>
                 </div>
 
-                <div class="bgTextCon">
-                    <div class="bgText1">
-                        <h1>Aquatica</h1>
-                        <h1>Aquatica</h1>
-                    </div>
-
-                    <div class="bgText2">
-                        <h1>ODDYSSEY</h1>
-                        <h1>ODDYSSEY</h1>
-                    </div>
-                </div>
+                <!-- <div class="bgTextCon"> -->
+                <!--     <div class="bgText1"> -->
+                <!--         <h1>Aquatica</h1> -->
+                <!--         <h1>Aquatica</h1> -->
+                <!--     </div> -->
+                <!---->
+                <!--     <div class="bgText2"> -->
+                <!--         <h1>ODDYSSEY</h1> -->
+                <!--         <h1>ODDYSSEY</h1> -->
+                <!--     </div> -->
+                <!-- </div> -->
             </section>
             <section id="slide5" class="slide slide5">
                 <canvas id="canvas"></canvas>
