--- a/index.html
+++ b/index.html
@@ -237,17 +237,17 @@
         <div id="curosol" class="curosol">
             <h1 class="curosolTitle">CHOOSE YOUR PATH</h1>
 
-            <!-- <div class="bgTextCon"> -->
-            <!--     <div class="bgText1"> -->
-            <!--         <h1>Aquatica</h1> -->
-            <!--         <h1>Aquatica</h1> -->
-            <!--     </div> -->
-            <!---->
-            <!--     <div class="bgText3"> -->
-            <!--         <h1>ODDYSSEY</h1> -->
-            <!--         <h1>ODDYSSEY</h1> -->
-            <!--     </div> -->
-            <!-- </div> -->
+            <div class="bgTextCon">
+                <div class="bgText1">
+                    <h1>Aquatica</h1>
+                    <h1>Aquatica</h1>
+                </div>
+
+                <div class="bgText3">
+                    <h1>ODDYSSEY</h1>
+                    <h1>ODDYSSEY</h1>
+                </div>
+            </div>
 
             <div class="sliderScrollCon">
                 <div id="catCardCon" class="catCardCon">
@@ -348,41 +348,41 @@
         <div class="herofooter">
             <div class="slider">
                 <div class="slideContent">
-                    <h1>EARN</h1>
+                    <h1>EXPLORE</h1>
                     <img src="/Aquatica/star.png" alt="star" />
-                    <h1 class="hollow">AQUATICA</h1>
+                    <h1 class="hollow">SURVIVE</h1>
                     <img src="/Aquatica/star.png" alt="star" />
-                    <h1>SHOOT</h1>
+                    <h1>BUILD</h1>
                     <img src="/Aquatica/star.png" alt="star" />
-                    <h1 class="hollow">PIONEER</h1>
+                    <h1 class="hollow">CONQUER</h1>
                     <img src="/Aquatica/star.png" alt="star" />
 
-                    <h1>EARN</h1>
+                    <h1>EXPLORE</h1>
                     <img src="/Aquatica/star.png" alt="star" />
-                    <h1 class="hollow">AQUATICA</h1>
+                    <h1 class="hollow">SURVIVE</h1>
                     <img src="/Aquatica/star.png" alt="star" />
-                    <h1>SHOOT</h1>
+                    <h1>BUILD</h1>
                     <img src="/Aquatica/star.png" alt="star" />
-                    <h1 class="hollow">PIONEER</h1>
+                    <h1 class="hollow">CONQUER</h1>
                     <img src="/Aquatica/star.png" alt="star" />
                 </div>
                 <div class="slideContent">
-                    <h1>EARN</h1>
+                    <h1>EXPLORE</h1>
                     <img src="/Aquatica/star.png" alt="star" />
-                    <h1 class="hollow">AQUATICA</h1>
+                    <h1 class="hollow">SURVIVE</h1>
                     <img src="/Aquatica/star.png" alt="star" />
-                    <h1>SHOOT</h1>
+                    <h1>BUILD</h1>
                     <img src="/Aquatica/star.png" alt="star" />
-                    <h1 class="hollow">PIONEER</h1>
+                    <h1 class="hollow">CONQUER</h1>
                     <img src="/Aquatica/star.png" alt="star" />
 
-                    <h1>EARN</h1>
+                    <h1>EXPLORE</h1>
                     <img src="/Aquatica/star.png" alt="star" />
-                    <h1 class="hollow">AQUATICA</h1>
+                    <h1 class="hollow">SURVIVE</h1>
                     <img src="/Aquatica/star.png" alt="star" />
-                    <h1>SHOOT</h1>
+                    <h1>BUILD</h1>
                     <img src="/Aquatica/star.png" alt="star" />
-                    <h1 class="hollow">PIONEER</h1>
+                    <h1 class="hollow">CONQUER</h1>
                     <img src="/Aquatica/star.png" alt="star" />
                 </div>
             </div>
