--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-    <div id="pageCon">
+    <!-- <div id="pageCon"> -->
         <div id="page" class="page">
             <div class="heroSec">
                 <div class="heroImg"></div>
@@ -444,7 +444,7 @@
                 </section>
             </div>
         </div>
-    </div>
+    <!-- </div> -->
     <!-- <div class="temp"></div> -->
 
     <script type="module" src="/main.js"></script>
