updated the mob

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="shadeCover"></div>
             </div>
 
-            <div class="scrollbody">
+            <div id="scrollbody" class="scrollbody">
                 <section id="slide1" class="slide slide1">
                     <div class="contextText contextText1">
                         <h1>01</h1>
