fixed the shadows

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <div>
                     <h1>Haven Architect</h1>
                     <p>
-                        Master the elements, build from scratch.<br />
-                        Transform an empty canvas into a sanctuary <br />
+                        Master the elements, build from scratch.<br class="mobDis" />
+                        Transform an empty canvas into a sanctuary <br  class="mobDis"/>
                         that echoes your vision and ingenuity.
                     </p>
                 </div>
@@ -134,8 +134,8 @@
                 <div>
                     <h1>Sovereign Seas</h1>
                     <p>
-                        Command the tides and claim your reign.<br />
-                        Lead your forces to glory as you voyage <br />
+                        Command the tides and claim your reign.<br  class="mobDis"/>
+                        Lead your forces to glory as you voyage <br  class="mobDis"/>
                         through unclaimed territories and forge your empire.
                     </p>
                 </div>
@@ -148,8 +148,8 @@
                     <h1>Galactic Social Sphere</h1>
                     <p>
                         Connect across galaxies. Aquatica Odyssey blends
-                        <br />exploration with camaraderie, crafting a universe where
-                        <br />
+                        <br  class="mobDis"/>exploration with camaraderie, crafting a universe where
+                        <br  class="mobDis"/>
                         every interaction is an alliance in the making.
                     </p>
                 </div>
