--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="heroTitle">
                     <h1>Welcome to aquatica</h1>
                     <p>
-                        Embark on a voyage where the marvels<br />
+                        Embark on a voyage where the marvels<br class="mobDis" />
                         of a boundless ocean planet unfold before you
                     </p>
                 </div>
@@ -108,7 +108,7 @@
                     <h1>Haven Architect</h1>
                     <p>
                         Master the elements, build from scratch.<br class="mobDis" />
-                        Transform an empty canvas into a sanctuary <br  class="mobDis"/>
+                        Transform an empty canvas into a sanctuary <br class="mobDis" />
                         that echoes your vision and ingenuity.
                     </p>
                 </div>
@@ -134,8 +134,8 @@
                 <div>
                     <h1>Sovereign Seas</h1>
                     <p>
-                        Command the tides and claim your reign.<br  class="mobDis"/>
-                        Lead your forces to glory as you voyage <br  class="mobDis"/>
+                        Command the tides and claim your reign.<br class="mobDis" />
+                        Lead your forces to glory as you voyage <br class="mobDis" />
                         through unclaimed territories and forge your empire.
                     </p>
                 </div>
@@ -148,8 +148,9 @@
                     <h1>Galactic Social Sphere</h1>
                     <p>
                         Connect across galaxies. Aquatica Odyssey blends
-                        <br  class="mobDis"/>exploration with camaraderie, crafting a universe where
-                        <br  class="mobDis"/>
+                        <br class="mobDis" />exploration with camaraderie, crafting a
+                        universe where
+                        <br class="mobDis" />
                         every interaction is an alliance in the making.
                     </p>
                 </div>
@@ -173,7 +174,7 @@
             <div class="modelTextCon">
                 <div class="modelText">
                     <!-- Helmet -->
-                    <h1>Helmet</h1>
+                    <h1>Ecodome</h1>
                     <p>
                         Crafted to convey the expressions of the Astrokid while also
                         ensuring their safety.
@@ -182,7 +183,8 @@
 
                 <div class="modelText">
                     <!--Ear piece  -->
-                    <h1>Ear Piece</h1>
+                    <!-- <h1>Eco Buds</h1> -->
+                    <h1>echopod</h1>
                     <p>
                         A communication device that coordinates with the bots crafted by
                         the player.
@@ -190,7 +192,7 @@
                 </div>
                 <div class="modelText">
                     <!--Generator  -->
-                    <h1>Generator</h1>
+                    <h1>GenCore</h1>
                     <p>
                         This device gradually refills the carrier over time based on the
                         level, powering the Astrokid's suit.
@@ -198,7 +200,7 @@
                 </div>
                 <div class="modelText">
                     <!--hands  -->
-                    <h1>Hands</h1>
+                    <h1>ArcLink</h1>
                     <p>
                         The mobile control center that provides access to all operations
                         and communications for the player.
@@ -206,7 +208,7 @@
                 </div>
                 <div class="modelText">
                     <!--Backpack  -->
-                    <h1>Backpack</h1>
+                    <h1>backvault</h1>
                     <p>
                         This serves as the energy carrier that powers the suit. It
                         provides storage that helps the player carry items while
@@ -216,7 +218,7 @@
 
                 <div class="modelText">
                     <!-- Belt  -->
-                    <h1>Belt</h1>
+                    <h1>supplystrap</h1>
                     <p>
                         A customizable accessory holder for easy access. It can hold
                         ammunition, med kits, etc.
@@ -224,7 +226,7 @@
                 </div>
                 <div class="modelText">
                     <!-- Shoes  -->
-                    <h1>Shoes</h1>
+                    <h1>Propelpads</h1>
                     <p>
                         Equipped with thrusters, these shoes provide a boost to the player
                         when needed, aiding in navigating the vast terrain or quickly
@@ -416,7 +418,7 @@
                 <div class="socialCon">
                     <h1>READY TO EXPERIENCE</h1>
                     <h1 class="yellow">NEW ERA OF GAMING<span>?</span></h1>
-                    <form>
+                    <form name="email-form" method="post" netlify>
                         <input type="email" placeholder="your email here..." />
                         <button type="submit">SUBSCIBE</button>
                     </form>
